# BI-ZUM

./: .gitignore
Pocitacove-ulohy/PU1/: README.md
Pocitacove-ulohy/PU1/StateSearchSpace/: kucerj56
Pocitacove-ulohy/PU2/bi-zum-salesman/: Makefile  test.py
Pocitacove-ulohy/PU2/bi-zum-salesman-simulator-template/: genetic.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Pocitacove-ulohy/PU2/bi-zum-salesman-template/: genetic.cpp
Pocitacove-ulohy/prohledavani-stavoveho-prostoru/: README.md
Pocitacove-ulohy/prohledavani-stavoveho-prostoru/StateSearchSpace/: CMakeLists.txt  Makefile  kucerj56
Pocitacove-ulohy/prohledavani-stavoveho-prostoru/StateSearchSpace/src/: CAStar.cpp  CAStar.hpp  CAlgorithm.cpp  CAlgorithm.hpp  CApplication.cpp  CApplication.hpp  CBFS.cpp  CBFS.hpp  CCoordinates.hpp  CCoordinatesPair.hpp  CDFS.cpp  CDFS.hpp  CGreedySearch.cpp  CGreedySearch.hpp  CInterface.cpp  CInterface.hpp  CMap.hpp  CRandomSearch.cpp  CRandomSearch.hpp  main.cpp
Semestralni-prace/: README.MD  config.py  main.py  requirements.txt  requirements_all_versioned.txt
Semestralni-prace/ocr/: ocr.py
Semestralni-prace/ocr/algorithms/: algorithm.py  bruteforce.py  genetic.py
Semestralni-prace/ocr/gui/: async_painter.py  dummy_painter.py  painter.py  sync_painter.py
Semestralni-prace/ocr/utils/: fitness.py  image_loader.py  plotter.py
Semestralni-prace/tests/: test_ocr.py
Semestralni-prace/tests/algorithms/: test_bruteforce.py  test_genetic.py
Semestralni-prace/tests/test_datasets/: symbols_dataset.py
Semestralni-prace/tests/utils/: test_fitness.py  (+2 more)
(+17 files in other folders)
